--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ZYY_SendWater</string>
+    <string name="menu_home">主页</string>
+    <string name="menu_order">订单</string>
+    <string name="menu_me">我的</string>
 </resources>
