--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="menu_home">主页</string>
     <string name="menu_order">订单</string>
     <string name="menu_me">我的</string>
+    <string name="menu_community">社区</string>
     <string name="test_name">testName</string>
     <string name="home_rv_text">homeRvText</string>
     <string name="home_rv_iamge">homeRvIamge</string>
